# medical-data-visualizer

./: .gitignore  README.md  app.py  medical_data_visualizer.py  pyproject.toml  requirements.txt  web_app.py
src/medical_data_visualizer/: __init__.py  medical_data_visualizer.py
