[project]
name = "medical-data-visualizer"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "you@yourdomain.com"},
]
description = "Medical data visualiser base on freecodecamp project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib ~= 3.7",
    "pandas ~= 2.0",
    "seaborn ~= 0.12.2",
]

[build-system]
requires = ["setuptools >= 67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.optional-dependencies]
dev = [
    "pytest",
]
